--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aarc-intentx-deposit",
+  "name": "aarc-pear-deposit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
